[gd_scene load_steps=9 format=3 uid="uid://c70hrqule5isy"]

[ext_resource type="Script" path="res://Scripts/1-SSB/standard_enemy.gd" id="1_xb45o"]
[ext_resource type="Texture2D" uid="uid://d0pi5ttrpn7qe" path="res://resources/01-SSB/graphics/Pixel Platformer/Tiles/Characters/standard_enemy__0000.png" id="2_v5l3p"]
[ext_resource type="Texture2D" uid="uid://brf5dtxkrksbs" path="res://resources/01-SSB/graphics/Pixel Platformer/Tiles/Characters/standard_enemy__0001.png" id="3_d4cqw"]
[ext_resource type="AudioStream" uid="uid://b2m8x7rsdf3kn" path="res://resources/Sounds/EnemySteped.wav" id="4_vuq7h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1rwty"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v5l3p")
}, {
"duration": 1.0,
"texture": ExtResource("3_d4cqw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ja4pf"]
size = Vector2(14, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3uyj"]
size = Vector2(14, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fril"]
size = Vector2(20, 9)

[node name="Node2D" type="CharacterBody2D"]
script = ExtResource("1_xb45o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_1rwty")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_ja4pf")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_u3uyj")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_1fril")

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vuq7h")

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
